Add registration page #6

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,10 +6,11 @@
   --primary-green: #006d77;
   --secondary-green: #83c5be;
   --dark-grey: #222222;
+  --errors: #b40202;
 }
 
 body {
-  background: #000;
+  background: #fff;
 }
 
 @layer utilities {
