feat:implement login logic with next-authjs
installed and set up NextAuthJs, used it in the login form to authenticate in the backend, used NextAuth Session management to display sign out button in the navbar when logged in

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,17 @@ body {
     text-wrap: balance;
   }
 }
+
+.loader {
+  border-color: var(--dark-grey) transparent transparent transparent;
+  animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
