enhancement: add logic for editing a profile
besides that, created components for error messages and for success messages, and other adjustments on layout components display

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,7 +47,7 @@ body {
 }
 
 .loader {
-  border-color: var(--dark-grey) transparent transparent transparent;
+  border-color: var(--primary-green) transparent transparent transparent;
   animation: spin 1.5s linear infinite;
 }
 
